Banner Title with Animation

--- a/assets/scss/_base.scss
+++ b/assets/scss/_base.scss
@@ -1,7 +1,7 @@
 // Font Family
-@import url("https://fonts.googleapis.com/css2?family=EB+Garamond:wght@400;600;700&family=Poppins:wght@300;400;500&display=swap");
-$fontGaramond: "EB Garamond", serif;
-$fontPoppins: "Poppins", sans-serif;
+@import url("https://fonts.googleapis.com/css2?family=Baloo+2:wght@400;500;600;700&family=Montserrat:wght@200;300;400;500;600&display=swap");
+$fontBaloo: "Baloo 2", cursive;
+$fontMontserrat: "Montserrat", sans-serif;
 
 // Theme Colors
 $blackColor: #000000;
@@ -14,6 +14,7 @@ $themeTextDark: #2e3235;
 $themeTextGrey1: #889198;
 $themeTextGrey2: #6f7a82;
 $themeTextGrey3: #5e707d;
+$themeTextYellow: #ffe221;
 
 $themeBackground1: #f6f6f6;
 $themeBackground2: #f8f9fb;
