--- a/assets/scss/_preset.scss
+++ b/assets/scss/_preset.scss
@@ -4,7 +4,7 @@ html {
 }
 html,
 body {
-  font-family: $fontPoppins;
+  font-family: $fontMontserrat;
   scroll-behavior: smooth;
   ::-webkit-scrollbar {
     width: 4px;
