--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,11 +1,11 @@
-@import url("https://fonts.googleapis.com/css2?family=EB+Garamond:wght@400;600;700&family=Poppins:wght@300;400;500&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Baloo+2:wght@400;500;600;700&family=Montserrat:wght@200;300;400;500;600&display=swap");
 html {
   overflow-x: hidden;
 }
 
 html,
 body {
-  font-family: "Poppins", sans-serif;
+  font-family: "Montserrat", sans-serif;
   scroll-behavior: smooth;
 }
 
@@ -140,6 +140,99 @@ a {
   }
 }
 
+@-webkit-keyframes titleAnimation {
+  0% {
+    -webkit-transform: translateY(-50px);
+            transform: translateY(-50px);
+    opacity: 0;
+    -webkit-clip-path: polygon(100% 0, 100% 100%, 0 100%, 0 80%);
+            clip-path: polygon(100% 0, 100% 100%, 0 100%, 0 80%);
+  }
+  20% {
+    -webkit-transform: translateY(0);
+            transform: translateY(0);
+    opacity: 1;
+    -webkit-clip-path: polygon(100% 0, 100% 100%, 0 100%, 0 15%);
+            clip-path: polygon(100% 0, 100% 100%, 0 100%, 0 15%);
+  }
+  80% {
+    -webkit-transform: translateY(0);
+            transform: translateY(0);
+    opacity: 1;
+    -webkit-clip-path: polygon(100% 0, 100% 100%, 0 100%, 0 15%);
+            clip-path: polygon(100% 0, 100% 100%, 0 100%, 0 15%);
+  }
+  100% {
+    -webkit-transform: translateY(50px);
+            transform: translateY(50px);
+    opacity: 0;
+    -webkit-clip-path: polygon(100% 0, 100% 0%, 0 100%, 0 100%);
+            clip-path: polygon(100% 0, 100% 0%, 0 100%, 0 100%);
+  }
+}
+
+@-o-keyframes titleAnimation {
+  0% {
+    -o-transform: translateY(-50px);
+       transform: translateY(-50px);
+    opacity: 0;
+    clip-path: polygon(100% 0, 100% 100%, 0 100%, 0 80%);
+  }
+  20% {
+    -o-transform: translateY(0);
+       transform: translateY(0);
+    opacity: 1;
+    clip-path: polygon(100% 0, 100% 100%, 0 100%, 0 15%);
+  }
+  80% {
+    -o-transform: translateY(0);
+       transform: translateY(0);
+    opacity: 1;
+    clip-path: polygon(100% 0, 100% 100%, 0 100%, 0 15%);
+  }
+  100% {
+    -o-transform: translateY(50px);
+       transform: translateY(50px);
+    opacity: 0;
+    clip-path: polygon(100% 0, 100% 0%, 0 100%, 0 100%);
+  }
+}
+
+@keyframes titleAnimation {
+  0% {
+    -webkit-transform: translateY(-50px);
+         -o-transform: translateY(-50px);
+            transform: translateY(-50px);
+    opacity: 0;
+    -webkit-clip-path: polygon(100% 0, 100% 100%, 0 100%, 0 80%);
+            clip-path: polygon(100% 0, 100% 100%, 0 100%, 0 80%);
+  }
+  20% {
+    -webkit-transform: translateY(0);
+         -o-transform: translateY(0);
+            transform: translateY(0);
+    opacity: 1;
+    -webkit-clip-path: polygon(100% 0, 100% 100%, 0 100%, 0 15%);
+            clip-path: polygon(100% 0, 100% 100%, 0 100%, 0 15%);
+  }
+  80% {
+    -webkit-transform: translateY(0);
+         -o-transform: translateY(0);
+            transform: translateY(0);
+    opacity: 1;
+    -webkit-clip-path: polygon(100% 0, 100% 100%, 0 100%, 0 15%);
+            clip-path: polygon(100% 0, 100% 100%, 0 100%, 0 15%);
+  }
+  100% {
+    -webkit-transform: translateY(50px);
+         -o-transform: translateY(50px);
+            transform: translateY(50px);
+    opacity: 0;
+    -webkit-clip-path: polygon(100% 0, 100% 0%, 0 100%, 0 100%);
+            clip-path: polygon(100% 0, 100% 0%, 0 100%, 0 100%);
+  }
+}
+
 .banner {
   background: -webkit-linear-gradient(30deg, #543ab7 0%, #00aeef 100%);
   background: -o-linear-gradient(30deg, #543ab7 0%, #00aeef 100%);
@@ -147,19 +240,99 @@ a {
 }
 
 .banner .inner-banner {
-  height: 85vh;
   width: 100%;
-  margin: 0;
-  padding: 0;
+  height: 100vh;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding: 50px 15px;
+}
+
+.banner .inner-banner .banner-content {
+  width: 100%;
+  height: 100%;
+  position: relative;
+}
+
+.banner .inner-banner .banner-content .banner-title {
+  display: none;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+      -ms-transform: translate(-50%, -50%);
+       -o-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  width: 100%;
+  text-align: center;
+}
+
+.banner .inner-banner .banner-content .banner-title .banner-text {
+  display: inline-block;
+  width: 100%;
+  font-family: "Baloo 2", cursive;
+  font-size: 35px;
+  font-weight: 600;
+  text-transform: uppercase;
+  color: #ffffff;
+  -webkit-clip-path: polygon(100% 0, 100% 100%, 0 100%, 0 80%);
+          clip-path: polygon(100% 0, 100% 100%, 0 100%, 0 80%);
+  -webkit-transform: translateY(-50px);
+      -ms-transform: translateY(-50px);
+       -o-transform: translateY(-50px);
+          transform: translateY(-50px);
+  opacity: 0;
+  -webkit-animation: titleAnimation 4s ease infinite;
+       -o-animation: titleAnimation 4s ease infinite;
+          animation: titleAnimation 4s ease infinite;
+  -webkit-animation-fill-mode: forwards;
+       -o-animation-fill-mode: forwards;
+          animation-fill-mode: forwards;
+  -webkit-animation-delay: 0.6s;
+       -o-animation-delay: 0.6s;
+          animation-delay: 0.6s;
+}
+
+.banner .inner-banner .banner-content .banner-title .banner-text:first-child {
+  -webkit-animation-delay: 0.7s;
+       -o-animation-delay: 0.7s;
+          animation-delay: 0.7s;
+}
+
+.banner .inner-banner .banner-content .banner-title .banner-text:last-child {
+  color: #ffe221;
+  -webkit-animation-delay: 0.5s;
+       -o-animation-delay: 0.5s;
+          animation-delay: 0.5s;
+}
+
+@media (min-width: 576px) {
+  .banner .inner-banner .banner-content .banner-title .banner-text {
+    font-size: 45px;
+  }
+}
+
+@media (min-width: 992px) {
+  .banner .inner-banner .banner-content .banner-title .banner-text {
+    font-size: 65px;
+  }
 }
 
 .banner .waves {
-  position: relative;
+  position: absolute;
+  bottom: 0;
   width: 100%;
-  height: 15vh;
-  margin-bottom: -7px;
   min-height: 100px;
-  max-height: 150px;
+  height: 15vh;
 }
 
 .banner .waves .parallax > use {
@@ -202,13 +375,6 @@ a {
   -webkit-animation-duration: 20s;
        -o-animation-duration: 20s;
           animation-duration: 20s;
-}
-
-@media (max-width: 768px) {
-  .banner .waves {
-    height: 40px;
-    min-height: 40px;
-  }
 }
 
 .footer .product-services li::before {
@@ -790,7 +956,7 @@ a {
   -webkit-align-items: center;
       -ms-flex-align: center;
           align-items: center;
-  font-family: "Poppins", sans-serif;
+  font-family: "Montserrat", sans-serif;
   font-size: 18px;
   font-weight: bold;
   line-height: 56px;
@@ -824,7 +990,7 @@ a {
 }
 
 .footer p {
-  font-family: "Poppins", sans-serif;
+  font-family: "Montserrat", sans-serif;
   font-size: 14px;
   font-weight: 300;
   line-height: 30px;
@@ -834,7 +1000,7 @@ a {
 }
 
 .footer h3 {
-  font-family: "Poppins", sans-serif;
+  font-family: "Montserrat", sans-serif;
   font-size: 18px;
   line-height: 33px;
   letter-spacing: 1px;
@@ -845,7 +1011,7 @@ a {
 }
 
 .footer .country-dropdown .btn {
-  font-family: "Poppins", sans-serif;
+  font-family: "Montserrat", sans-serif;
   font-size: 14px;
   color: #fff;
   -webkit-box-shadow: none;
@@ -894,7 +1060,7 @@ a {
 }
 
 .footer .country-dropdown .dropdown-menu li .dropdown-item {
-  font-family: "Poppins", sans-serif;
+  font-family: "Montserrat", sans-serif;
   font-size: 14px;
   color: #19506d;
   text-transform: uppercase;
@@ -921,7 +1087,7 @@ a {
 
 .footer .product-services li a {
   display: inline-block;
-  font-family: "Poppins", sans-serif;
+  font-family: "Montserrat", sans-serif;
   font-size: 14px;
   line-height: 3;
   color: #595f7c;
@@ -1020,7 +1186,7 @@ a {
 }
 
 .footer .subscribe-wrap label {
-  font-family: "Poppins", sans-serif;
+  font-family: "Montserrat", sans-serif;
   display: -webkit-box;
   display: -webkit-flex;
   display: -ms-flexbox;
@@ -1053,7 +1219,7 @@ a {
 }
 
 .footer .subscribe-wrap .input-group input {
-  font-family: "Poppins", sans-serif;
+  font-family: "Montserrat", sans-serif;
   background: #121a3e;
   border: none;
   color: #fff;
@@ -1064,7 +1230,7 @@ a {
 }
 
 .footer .subscribe-wrap .input-group button {
-  font-family: "Poppins", sans-serif;
+  font-family: "Montserrat", sans-serif;
   font-size: 18px;
   font-weight: 500;
   text-transform: uppercase;
@@ -1118,7 +1284,7 @@ a {
 
 .footer .sub-footer .foot-links a {
   display: inline-block;
-  font-family: "Poppins", sans-serif;
+  font-family: "Montserrat", sans-serif;
   font-size: 14px;
   color: #42b6ff;
   -webkit-transition: 0.4s ease-in;
