--- a/assets/scss/_common.scss
+++ b/assets/scss/_common.scss
@@ -57,6 +57,30 @@
     transform: translate3d(85px, 0, 0);
   }
 }
+// Banner Text Animation
+@keyframes titleAnimation {
+  0% {
+    transform: translateY(-50px);
+    opacity: 0;
+    clip-path: polygon(100% 0, 100% 100%, 0 100%, 0 80%);
+  }
+  20% {
+    transform: translateY(0);
+    opacity: 1;
+    clip-path: polygon(100% 0, 100% 100%, 0 100%, 0 15%);
+  }
+  80% {
+    transform: translateY(0);
+    opacity: 1;
+    clip-path: polygon(100% 0, 100% 100%, 0 100%, 0 15%);
+  }
+  100% {
+    transform: translateY(50px);
+    opacity: 0;
+    clip-path: polygon(100% 0, 100% -0%, 0 100%, 0 100%);
+  }
+}
+
 .banner {
   background: linear-gradient(
     60deg,
@@ -64,18 +88,63 @@
     rgba($themePrimary, 1) 100%
   );
   .inner-banner {
-    height: 85vh;
     width: 100%;
-    margin: 0;
-    padding: 0;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 50px 15px;
+    .banner-content {
+      width: 100%;
+      height: 100%;
+      position: relative;
+      .banner-title {
+        display: none;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+
+        width: 100%;
+        text-align: center;
+
+        .banner-text {
+          display: inline-block;
+          width: 100%;
+          font-family: $fontBaloo;
+          font-size: 35px;
+          font-weight: 600;
+          text-transform: uppercase;
+          color: $whiteColor;
+          clip-path: polygon(100% 0, 100% 100%, 0 100%, 0 80%);
+          transform: translateY(-50px);
+          opacity: 0;
+          animation: titleAnimation 4s ease infinite;
+          animation-fill-mode: forwards;
+          animation-delay: 0.6s;
+          &:first-child {
+            animation-delay: 0.7s;
+          }
+          &:last-child {
+            color: $themeTextYellow;
+            animation-delay: 0.5s;
+          }
+          @media (min-width: 576px) {
+            font-size: 45px;
+          }
+          @media (min-width: 992px) {
+            font-size: 65px;
+          }
+        }
+      }
+    }
   }
   .waves {
-    position: relative;
+    position: absolute;
+    bottom: 0;
     width: 100%;
-    height: 15vh;
-    margin-bottom: -7px;
     min-height: 100px;
-    max-height: 150px;
+    height: 15vh;
     .parallax > use {
       animation: moveForever 25s cubic-bezier(0.55, 0.5, 0.45, 0.5) infinite;
     }
@@ -96,14 +165,7 @@
       animation-duration: 20s;
     }
   }
-  @media (max-width: 768px) {
-    .waves {
-      height: 40px;
-      min-height: 40px;
-    }
-  }
 }
-
 // Banner Waves End
 
 // List Style{
