--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -49,6 +49,632 @@ a {
           align-items: center;
 }
 
+.loader {
+  position: absolute;
+  width: 40px;
+  height: 40px;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+      -ms-transform: translate(-50%, -50%);
+       -o-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  list-style: none;
+  padding: 0;
+}
+
+.loader .center {
+  width: 40px;
+  height: 40px;
+  background: #543ab7;
+  border-radius: 50%;
+  -webkit-animation: center 3.2s ease-in-out infinite;
+       -o-animation: center 3.2s ease-in-out infinite;
+          animation: center 3.2s ease-in-out infinite;
+}
+
+.loader .item {
+  position: absolute;
+  width: 10px;
+  height: 10px;
+  top: 15px;
+  left: 0;
+  right: 0;
+  margin: auto;
+  background: #543ab7;
+  border-radius: 50%;
+}
+
+.item-1 {
+  -webkit-animation: anim-1 3.2s ease-in-out infinite 0.2s;
+       -o-animation: anim-1 3.2s ease-in-out infinite 0.2s;
+          animation: anim-1 3.2s ease-in-out infinite 0.2s;
+  -webkit-animation-fill-mode: backwards;
+       -o-animation-fill-mode: backwards;
+          animation-fill-mode: backwards;
+}
+
+@-webkit-keyframes anim-1 {
+  0%,
+  60%,
+  100% {
+    -webkit-transform: rotate(45deg) translateX(40px) scale(1);
+            transform: rotate(45deg) translateX(40px) scale(1);
+  }
+  10%,
+  50% {
+    -webkit-transform: rotate(45deg) translateX(0) scale(1.5);
+            transform: rotate(45deg) translateX(0) scale(1.5);
+  }
+}
+
+@-o-keyframes anim-1 {
+  0%,
+  60%,
+  100% {
+    -o-transform: rotate(45deg) translateX(40px) scale(1);
+       transform: rotate(45deg) translateX(40px) scale(1);
+  }
+  10%,
+  50% {
+    -o-transform: rotate(45deg) translateX(0) scale(1.5);
+       transform: rotate(45deg) translateX(0) scale(1.5);
+  }
+}
+
+@keyframes anim-1 {
+  0%,
+  60%,
+  100% {
+    -webkit-transform: rotate(45deg) translateX(40px) scale(1);
+         -o-transform: rotate(45deg) translateX(40px) scale(1);
+            transform: rotate(45deg) translateX(40px) scale(1);
+  }
+  10%,
+  50% {
+    -webkit-transform: rotate(45deg) translateX(0) scale(1.5);
+         -o-transform: rotate(45deg) translateX(0) scale(1.5);
+            transform: rotate(45deg) translateX(0) scale(1.5);
+  }
+}
+
+@-webkit-keyframes center {
+  0%,
+  10%,
+  90%,
+  100% {
+    -webkit-transform: scale(0.7);
+            transform: scale(0.7);
+  }
+  45%,
+  55% {
+    -webkit-transform: scale(1);
+            transform: scale(1);
+  }
+}
+
+@-o-keyframes center {
+  0%,
+  10%,
+  90%,
+  100% {
+    -o-transform: scale(0.7);
+       transform: scale(0.7);
+  }
+  45%,
+  55% {
+    -o-transform: scale(1);
+       transform: scale(1);
+  }
+}
+
+@keyframes center {
+  0%,
+  10%,
+  90%,
+  100% {
+    -webkit-transform: scale(0.7);
+         -o-transform: scale(0.7);
+            transform: scale(0.7);
+  }
+  45%,
+  55% {
+    -webkit-transform: scale(1);
+         -o-transform: scale(1);
+            transform: scale(1);
+  }
+}
+
+.item-2 {
+  -webkit-animation: anim-2 3.2s ease-in-out infinite 0.4s;
+       -o-animation: anim-2 3.2s ease-in-out infinite 0.4s;
+          animation: anim-2 3.2s ease-in-out infinite 0.4s;
+  -webkit-animation-fill-mode: backwards;
+       -o-animation-fill-mode: backwards;
+          animation-fill-mode: backwards;
+}
+
+@-webkit-keyframes anim-2 {
+  0%,
+  60%,
+  100% {
+    -webkit-transform: rotate(90deg) translateX(40px) scale(1);
+            transform: rotate(90deg) translateX(40px) scale(1);
+  }
+  10%,
+  50% {
+    -webkit-transform: rotate(90deg) translateX(0) scale(1.5);
+            transform: rotate(90deg) translateX(0) scale(1.5);
+  }
+}
+
+@-o-keyframes anim-2 {
+  0%,
+  60%,
+  100% {
+    -o-transform: rotate(90deg) translateX(40px) scale(1);
+       transform: rotate(90deg) translateX(40px) scale(1);
+  }
+  10%,
+  50% {
+    -o-transform: rotate(90deg) translateX(0) scale(1.5);
+       transform: rotate(90deg) translateX(0) scale(1.5);
+  }
+}
+
+@keyframes anim-2 {
+  0%,
+  60%,
+  100% {
+    -webkit-transform: rotate(90deg) translateX(40px) scale(1);
+         -o-transform: rotate(90deg) translateX(40px) scale(1);
+            transform: rotate(90deg) translateX(40px) scale(1);
+  }
+  10%,
+  50% {
+    -webkit-transform: rotate(90deg) translateX(0) scale(1.5);
+         -o-transform: rotate(90deg) translateX(0) scale(1.5);
+            transform: rotate(90deg) translateX(0) scale(1.5);
+  }
+}
+
+@keyframes center {
+  0%,
+  10%,
+  90%,
+  100% {
+    -webkit-transform: scale(0.7);
+         -o-transform: scale(0.7);
+            transform: scale(0.7);
+  }
+  45%,
+  55% {
+    -webkit-transform: scale(1);
+         -o-transform: scale(1);
+            transform: scale(1);
+  }
+}
+
+.item-3 {
+  -webkit-animation: anim-3 3.2s ease-in-out infinite 0.6s;
+       -o-animation: anim-3 3.2s ease-in-out infinite 0.6s;
+          animation: anim-3 3.2s ease-in-out infinite 0.6s;
+  -webkit-animation-fill-mode: backwards;
+       -o-animation-fill-mode: backwards;
+          animation-fill-mode: backwards;
+}
+
+@-webkit-keyframes anim-3 {
+  0%,
+  60%,
+  100% {
+    -webkit-transform: rotate(135deg) translateX(40px) scale(1);
+            transform: rotate(135deg) translateX(40px) scale(1);
+  }
+  10%,
+  50% {
+    -webkit-transform: rotate(135deg) translateX(0) scale(1.5);
+            transform: rotate(135deg) translateX(0) scale(1.5);
+  }
+}
+
+@-o-keyframes anim-3 {
+  0%,
+  60%,
+  100% {
+    -o-transform: rotate(135deg) translateX(40px) scale(1);
+       transform: rotate(135deg) translateX(40px) scale(1);
+  }
+  10%,
+  50% {
+    -o-transform: rotate(135deg) translateX(0) scale(1.5);
+       transform: rotate(135deg) translateX(0) scale(1.5);
+  }
+}
+
+@keyframes anim-3 {
+  0%,
+  60%,
+  100% {
+    -webkit-transform: rotate(135deg) translateX(40px) scale(1);
+         -o-transform: rotate(135deg) translateX(40px) scale(1);
+            transform: rotate(135deg) translateX(40px) scale(1);
+  }
+  10%,
+  50% {
+    -webkit-transform: rotate(135deg) translateX(0) scale(1.5);
+         -o-transform: rotate(135deg) translateX(0) scale(1.5);
+            transform: rotate(135deg) translateX(0) scale(1.5);
+  }
+}
+
+@keyframes center {
+  0%,
+  10%,
+  90%,
+  100% {
+    -webkit-transform: scale(0.7);
+         -o-transform: scale(0.7);
+            transform: scale(0.7);
+  }
+  45%,
+  55% {
+    -webkit-transform: scale(1);
+         -o-transform: scale(1);
+            transform: scale(1);
+  }
+}
+
+.item-4 {
+  -webkit-animation: anim-4 3.2s ease-in-out infinite 0.8s;
+       -o-animation: anim-4 3.2s ease-in-out infinite 0.8s;
+          animation: anim-4 3.2s ease-in-out infinite 0.8s;
+  -webkit-animation-fill-mode: backwards;
+       -o-animation-fill-mode: backwards;
+          animation-fill-mode: backwards;
+}
+
+@-webkit-keyframes anim-4 {
+  0%,
+  60%,
+  100% {
+    -webkit-transform: rotate(180deg) translateX(40px) scale(1);
+            transform: rotate(180deg) translateX(40px) scale(1);
+  }
+  10%,
+  50% {
+    -webkit-transform: rotate(180deg) translateX(0) scale(1.5);
+            transform: rotate(180deg) translateX(0) scale(1.5);
+  }
+}
+
+@-o-keyframes anim-4 {
+  0%,
+  60%,
+  100% {
+    -o-transform: rotate(180deg) translateX(40px) scale(1);
+       transform: rotate(180deg) translateX(40px) scale(1);
+  }
+  10%,
+  50% {
+    -o-transform: rotate(180deg) translateX(0) scale(1.5);
+       transform: rotate(180deg) translateX(0) scale(1.5);
+  }
+}
+
+@keyframes anim-4 {
+  0%,
+  60%,
+  100% {
+    -webkit-transform: rotate(180deg) translateX(40px) scale(1);
+         -o-transform: rotate(180deg) translateX(40px) scale(1);
+            transform: rotate(180deg) translateX(40px) scale(1);
+  }
+  10%,
+  50% {
+    -webkit-transform: rotate(180deg) translateX(0) scale(1.5);
+         -o-transform: rotate(180deg) translateX(0) scale(1.5);
+            transform: rotate(180deg) translateX(0) scale(1.5);
+  }
+}
+
+@keyframes center {
+  0%,
+  10%,
+  90%,
+  100% {
+    -webkit-transform: scale(0.7);
+         -o-transform: scale(0.7);
+            transform: scale(0.7);
+  }
+  45%,
+  55% {
+    -webkit-transform: scale(1);
+         -o-transform: scale(1);
+            transform: scale(1);
+  }
+}
+
+.item-5 {
+  -webkit-animation: anim-5 3.2s ease-in-out infinite 1s;
+       -o-animation: anim-5 3.2s ease-in-out infinite 1s;
+          animation: anim-5 3.2s ease-in-out infinite 1s;
+  -webkit-animation-fill-mode: backwards;
+       -o-animation-fill-mode: backwards;
+          animation-fill-mode: backwards;
+}
+
+@-webkit-keyframes anim-5 {
+  0%,
+  60%,
+  100% {
+    -webkit-transform: rotate(225deg) translateX(40px) scale(1);
+            transform: rotate(225deg) translateX(40px) scale(1);
+  }
+  10%,
+  50% {
+    -webkit-transform: rotate(225deg) translateX(0) scale(1.5);
+            transform: rotate(225deg) translateX(0) scale(1.5);
+  }
+}
+
+@-o-keyframes anim-5 {
+  0%,
+  60%,
+  100% {
+    -o-transform: rotate(225deg) translateX(40px) scale(1);
+       transform: rotate(225deg) translateX(40px) scale(1);
+  }
+  10%,
+  50% {
+    -o-transform: rotate(225deg) translateX(0) scale(1.5);
+       transform: rotate(225deg) translateX(0) scale(1.5);
+  }
+}
+
+@keyframes anim-5 {
+  0%,
+  60%,
+  100% {
+    -webkit-transform: rotate(225deg) translateX(40px) scale(1);
+         -o-transform: rotate(225deg) translateX(40px) scale(1);
+            transform: rotate(225deg) translateX(40px) scale(1);
+  }
+  10%,
+  50% {
+    -webkit-transform: rotate(225deg) translateX(0) scale(1.5);
+         -o-transform: rotate(225deg) translateX(0) scale(1.5);
+            transform: rotate(225deg) translateX(0) scale(1.5);
+  }
+}
+
+@keyframes center {
+  0%,
+  10%,
+  90%,
+  100% {
+    -webkit-transform: scale(0.7);
+         -o-transform: scale(0.7);
+            transform: scale(0.7);
+  }
+  45%,
+  55% {
+    -webkit-transform: scale(1);
+         -o-transform: scale(1);
+            transform: scale(1);
+  }
+}
+
+.item-6 {
+  -webkit-animation: anim-6 3.2s ease-in-out infinite 1.2s;
+       -o-animation: anim-6 3.2s ease-in-out infinite 1.2s;
+          animation: anim-6 3.2s ease-in-out infinite 1.2s;
+  -webkit-animation-fill-mode: backwards;
+       -o-animation-fill-mode: backwards;
+          animation-fill-mode: backwards;
+}
+
+@-webkit-keyframes anim-6 {
+  0%,
+  60%,
+  100% {
+    -webkit-transform: rotate(270deg) translateX(40px) scale(1);
+            transform: rotate(270deg) translateX(40px) scale(1);
+  }
+  10%,
+  50% {
+    -webkit-transform: rotate(270deg) translateX(0) scale(1.5);
+            transform: rotate(270deg) translateX(0) scale(1.5);
+  }
+}
+
+@-o-keyframes anim-6 {
+  0%,
+  60%,
+  100% {
+    -o-transform: rotate(270deg) translateX(40px) scale(1);
+       transform: rotate(270deg) translateX(40px) scale(1);
+  }
+  10%,
+  50% {
+    -o-transform: rotate(270deg) translateX(0) scale(1.5);
+       transform: rotate(270deg) translateX(0) scale(1.5);
+  }
+}
+
+@keyframes anim-6 {
+  0%,
+  60%,
+  100% {
+    -webkit-transform: rotate(270deg) translateX(40px) scale(1);
+         -o-transform: rotate(270deg) translateX(40px) scale(1);
+            transform: rotate(270deg) translateX(40px) scale(1);
+  }
+  10%,
+  50% {
+    -webkit-transform: rotate(270deg) translateX(0) scale(1.5);
+         -o-transform: rotate(270deg) translateX(0) scale(1.5);
+            transform: rotate(270deg) translateX(0) scale(1.5);
+  }
+}
+
+@keyframes center {
+  0%,
+  10%,
+  90%,
+  100% {
+    -webkit-transform: scale(0.7);
+         -o-transform: scale(0.7);
+            transform: scale(0.7);
+  }
+  45%,
+  55% {
+    -webkit-transform: scale(1);
+         -o-transform: scale(1);
+            transform: scale(1);
+  }
+}
+
+.item-7 {
+  -webkit-animation: anim-7 3.2s ease-in-out infinite 1.4s;
+       -o-animation: anim-7 3.2s ease-in-out infinite 1.4s;
+          animation: anim-7 3.2s ease-in-out infinite 1.4s;
+  -webkit-animation-fill-mode: backwards;
+       -o-animation-fill-mode: backwards;
+          animation-fill-mode: backwards;
+}
+
+@-webkit-keyframes anim-7 {
+  0%,
+  60%,
+  100% {
+    -webkit-transform: rotate(315deg) translateX(40px) scale(1);
+            transform: rotate(315deg) translateX(40px) scale(1);
+  }
+  10%,
+  50% {
+    -webkit-transform: rotate(315deg) translateX(0) scale(1.5);
+            transform: rotate(315deg) translateX(0) scale(1.5);
+  }
+}
+
+@-o-keyframes anim-7 {
+  0%,
+  60%,
+  100% {
+    -o-transform: rotate(315deg) translateX(40px) scale(1);
+       transform: rotate(315deg) translateX(40px) scale(1);
+  }
+  10%,
+  50% {
+    -o-transform: rotate(315deg) translateX(0) scale(1.5);
+       transform: rotate(315deg) translateX(0) scale(1.5);
+  }
+}
+
+@keyframes anim-7 {
+  0%,
+  60%,
+  100% {
+    -webkit-transform: rotate(315deg) translateX(40px) scale(1);
+         -o-transform: rotate(315deg) translateX(40px) scale(1);
+            transform: rotate(315deg) translateX(40px) scale(1);
+  }
+  10%,
+  50% {
+    -webkit-transform: rotate(315deg) translateX(0) scale(1.5);
+         -o-transform: rotate(315deg) translateX(0) scale(1.5);
+            transform: rotate(315deg) translateX(0) scale(1.5);
+  }
+}
+
+@keyframes center {
+  0%,
+  10%,
+  90%,
+  100% {
+    -webkit-transform: scale(0.7);
+         -o-transform: scale(0.7);
+            transform: scale(0.7);
+  }
+  45%,
+  55% {
+    -webkit-transform: scale(1);
+         -o-transform: scale(1);
+            transform: scale(1);
+  }
+}
+
+.item-8 {
+  -webkit-animation: anim-8 3.2s ease-in-out infinite 1.6s;
+       -o-animation: anim-8 3.2s ease-in-out infinite 1.6s;
+          animation: anim-8 3.2s ease-in-out infinite 1.6s;
+  -webkit-animation-fill-mode: backwards;
+       -o-animation-fill-mode: backwards;
+          animation-fill-mode: backwards;
+}
+
+@-webkit-keyframes anim-8 {
+  0%,
+  60%,
+  100% {
+    -webkit-transform: rotate(360deg) translateX(40px) scale(1);
+            transform: rotate(360deg) translateX(40px) scale(1);
+  }
+  10%,
+  50% {
+    -webkit-transform: rotate(360deg) translateX(0) scale(1.5);
+            transform: rotate(360deg) translateX(0) scale(1.5);
+  }
+}
+
+@-o-keyframes anim-8 {
+  0%,
+  60%,
+  100% {
+    -o-transform: rotate(360deg) translateX(40px) scale(1);
+       transform: rotate(360deg) translateX(40px) scale(1);
+  }
+  10%,
+  50% {
+    -o-transform: rotate(360deg) translateX(0) scale(1.5);
+       transform: rotate(360deg) translateX(0) scale(1.5);
+  }
+}
+
+@keyframes anim-8 {
+  0%,
+  60%,
+  100% {
+    -webkit-transform: rotate(360deg) translateX(40px) scale(1);
+         -o-transform: rotate(360deg) translateX(40px) scale(1);
+            transform: rotate(360deg) translateX(40px) scale(1);
+  }
+  10%,
+  50% {
+    -webkit-transform: rotate(360deg) translateX(0) scale(1.5);
+         -o-transform: rotate(360deg) translateX(0) scale(1.5);
+            transform: rotate(360deg) translateX(0) scale(1.5);
+  }
+}
+
+@keyframes center {
+  0%,
+  10%,
+  90%,
+  100% {
+    -webkit-transform: scale(0.7);
+         -o-transform: scale(0.7);
+            transform: scale(0.7);
+  }
+  45%,
+  55% {
+    -webkit-transform: scale(1);
+         -o-transform: scale(1);
+            transform: scale(1);
+  }
+}
+
 .dropdown .dropdown-menu {
   display: block;
   position: absolute;
@@ -548,11 +1174,17 @@ a {
   transition: all 0.4s ease;
 }
 
-.header .sub-header .container .contacts a:hover {
-  -webkit-transform: scaleX(1.1);
-      -ms-transform: scaleX(1.1);
-       -o-transform: scaleX(1.1);
-          transform: scaleX(1.1);
+.header .sub-header .container .contacts a i {
+  -webkit-transition: all 0.4s ease;
+  -o-transition: all 0.4s ease;
+  transition: all 0.4s ease;
+}
+
+.header .sub-header .container .contacts a:hover i {
+  -webkit-transform: rotate(360deg);
+      -ms-transform: rotate(360deg);
+       -o-transform: rotate(360deg);
+          transform: rotate(360deg);
 }
 
 .header .sub-header-scroll {
