--- a/assets/scss/_preset.scss
+++ b/assets/scss/_preset.scss
@@ -33,7 +33,7 @@ a {
 // Loader Start
 // Loader vars
 $loader-size: 40px;
-$loader-color: $themeSecondary;
+$loader-color: $themePrimary;
 $loader-time: 3.2s;
 $loader-delay: 0s;
 
