--- a/assets/scss/_common.scss
+++ b/assets/scss/_common.scss
@@ -18,7 +18,7 @@
         text-transform: capitalize;
         transition: all 0.4s ease;
         &:hover {
-          background-color: $themeSecondary;
+          background-color: $themePrimary;
           color: $whiteColor;
         }
         &:active {
@@ -167,6 +167,68 @@
   }
 }
 // Banner Waves End
+
+// About Section Start
+.about-us {
+  background-color: $whiteColor;
+  padding: 50px 0;
+  @media (min-width: 992px) {
+    padding: 100px 0;
+  }
+  .section-title {
+    font-family: $fontBaloo;
+    font-size: 34px;
+    color: $themeTextGrey3;
+    position: relative;
+    margin-bottom: 18px;
+    &::after {
+      content: "";
+      width: 60px;
+      height: 3px;
+      background-color: $themePrimary;
+      position: absolute;
+      left: 0;
+      bottom: 0;
+    }
+    @media (min-width: 992px) {
+      font-size: 40px;
+      margin-bottom: 24px;
+    }
+  }
+  h3 {
+    font-size: 20px;
+    line-height: 40px;
+    font-weight: 300;
+    color: $themeTextDark;
+    text-align: justify;
+    @media (min-width: 992px) {
+      font-size: 24px;
+      line-height: 50px;
+      padding-right: 20px;
+    }
+  }
+  p {
+    color: $themeTextGrey2;
+    line-height: 35px;
+    text-align: justify;
+  }
+
+  // .slide-up {
+  //   animation: 2s slide-up;
+  // }
+
+  // @keyframes slide-up {
+  //   from {
+  //     margin-top: 100%;
+  //     height: 200%;
+  //   }
+
+  //   to {
+  //     margin-top: 0;
+  //     height: auto;
+  //   }
+  // }
+}
 
 // List Style{
 %list-style {
