--- a/assets/scss/_header.scss
+++ b/assets/scss/_header.scss
@@ -139,8 +139,10 @@
     .container {
       @extend %flexBetweenCenter;
       .navbar-brand {
+        font-family: $fontBaloo;
+        font-size: 26px;
+        font-weight: 600;
         color: $whiteColor;
-        font-weight: 500;
         transition: all 0.4s ease;
       }
       .navbar-toggler {
@@ -159,10 +161,10 @@
     top: 0;
     .container {
       .navbar-brand {
-        color: $themeSecondary;
+        color: $themePrimary;
       }
       .navbar-toggler {
-        color: $themeSecondary;
+        color: $themePrimary;
       }
     }
   }
@@ -255,7 +257,7 @@
       .offcanvas-header {
         margin-bottom: 15px;
         .navbar-brand {
-          color: $themeSecondary;
+          color: $themePrimary;
         }
         .btn-close {
           margin-right: 1px;
@@ -264,7 +266,7 @@
           opacity: 0.8;
           box-shadow: none;
           svg {
-            fill: $themeSecondary;
+            fill: $themePrimary;
           }
         }
       }
@@ -283,12 +285,12 @@
               left: 0;
               right: 0;
               margin: auto;
-              background-color: $themeSecondary;
+              background-color: $themePrimary;
               transform: scaleX(0);
               transition: transform 0.4s ease;
             }
             &:hover {
-              color: $themeSecondary;
+              color: $themePrimary;
               &::after {
                 transform: scaleX(1);
               }
@@ -296,7 +298,7 @@
           }
           .nav-link.active {
             font-weight: 500;
-            color: $themeSecondary;
+            color: $themePrimary;
             &::after {
               transform: scaleX(1);
               transition: transform 0.4s ease;
@@ -305,12 +307,12 @@
         }
       }
       .btn-login {
-        border: 2px solid $themeSecondary;
-        color: $themeSecondary;
+        border: 2px solid $themePrimary;
+        color: $themePrimary;
         &:hover {
           color: $whiteColor;
           &::before {
-            box-shadow: inset 0 0 0 10em $themeSecondary;
+            box-shadow: inset 0 0 0 10em $themePrimary;
           }
         }
       }
@@ -324,7 +326,7 @@
     top: 0;
     .offcanvas-header {
       .navbar-brand {
-        color: $themeSecondary;
+        color: $themePrimary;
       }
     }
     .navbar-nav {
@@ -332,14 +334,14 @@
         .nav-link {
           color: $themeTextDark;
           &:hover {
-            color: $themeSecondary;
+            color: $themePrimary;
             &::after {
-              background-color: $themeSecondary;
+              background-color: $themePrimary;
             }
           }
         }
         .nav-link.active {
-          color: $themeSecondary;
+          color: $themePrimary;
           &::after {
             background-color: currentColor;
           }
@@ -347,12 +349,12 @@
       }
     }
     .btn-login {
-      border: 2px solid $themeSecondary;
-      color: $themeSecondary;
+      border: 2px solid $themePrimary;
+      color: $themePrimary;
       &:hover {
         color: $whiteColor;
         &::before {
-          box-shadow: inset 0 0 0 10em $themeSecondary;
+          box-shadow: inset 0 0 0 10em $themePrimary;
         }
       }
     }
@@ -362,8 +364,12 @@
     width: 100%;
     padding: 0;
     .navbar-brand {
+      font-family: $fontBaloo;
+      font-size: 26px;
+      font-weight: 600;
       @media (min-width: 992px) {
         color: $whiteColor;
+        font-size: 34px;
       }
     }
     .btn-close {
