--- a/assets/scss/_common.scss
+++ b/assets/scss/_common.scss
@@ -87,14 +87,14 @@
     rgba($themeSecondary, 1) 0%,
     rgba($themePrimary, 1) 100%
   );
-  overflow: hidden;
+  // overflow: hidden;
   .inner-banner {
     width: 100%;
     height: 100vh;
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 50px 15px;
+    // padding: 50px 15px;
     .banner-content {
       width: 100%;
       height: 100%;
