--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -863,11 +863,12 @@ a {
   background: -webkit-linear-gradient(30deg, #543ab7 0%, #00aeef 100%);
   background: -o-linear-gradient(30deg, #543ab7 0%, #00aeef 100%);
   background: linear-gradient(60deg, #543ab7 0%, #00aeef 100%);
+  height: 100vh;
 }
 
 .banner .inner-banner {
   width: 100%;
-  height: 100vh;
+  height: 85vh;
   display: -webkit-box;
   display: -webkit-flex;
   display: -ms-flexbox;
@@ -880,6 +881,7 @@ a {
   -webkit-align-items: center;
       -ms-flex-align: center;
           align-items: center;
+  padding: 50px 15px;
 }
 
 .banner .inner-banner .banner-content {
