--- a/assets/scss/_common.scss
+++ b/assets/scss/_common.scss
@@ -87,14 +87,15 @@
     rgba($themeSecondary, 1) 0%,
     rgba($themePrimary, 1) 100%
   );
+  height: 100vh;
   // overflow: hidden;
   .inner-banner {
     width: 100%;
-    height: 100vh;
+    height: 85vh;
     display: flex;
     justify-content: center;
     align-items: center;
-    // padding: 50px 15px;
+    padding: 50px 15px;
     .banner-content {
       width: 100%;
       height: 100%;
@@ -105,10 +106,8 @@
         top: 50%;
         left: 50%;
         transform: translate(-50%, -50%);
-
         width: 100%;
         text-align: center;
-
         .banner-text {
           display: inline-block;
           width: 100%;
