--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -864,6 +864,7 @@ a {
   background: -o-linear-gradient(30deg, #543ab7 0%, #00aeef 100%);
   background: linear-gradient(60deg, #543ab7 0%, #00aeef 100%);
   height: 100vh;
+  overflow: hidden;
 }
 
 .banner .inner-banner {
