--- a/assets/scss/_common.scss
+++ b/assets/scss/_common.scss
@@ -88,7 +88,7 @@
     rgba($themePrimary, 1) 100%
   );
   height: 100vh;
-  // overflow: hidden;
+  overflow: hidden;
   .inner-banner {
     width: 100%;
     height: 85vh;
