Banner waves height change with calc function

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -869,7 +869,7 @@ a {
 
 .banner .inner-banner {
   width: 100%;
-  height: 85vh;
+  height: 100%;
   display: -webkit-box;
   display: -webkit-flex;
   display: -ms-flexbox;
@@ -960,7 +960,7 @@ a {
   bottom: 0;
   width: 100%;
   min-height: 100px;
-  height: 15vh;
+  height: calc(100% - 85vh);
 }
 
 .banner .waves .parallax > use {
