--- a/assets/scss/_common.scss
+++ b/assets/scss/_common.scss
@@ -91,7 +91,7 @@
   overflow: hidden;
   .inner-banner {
     width: 100%;
-    height: 85vh;
+    height: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -144,7 +144,7 @@
     bottom: 0;
     width: 100%;
     min-height: 100px;
-    height: 15vh;
+    height: calc(100% - 85vh);
     .parallax > use {
       animation: moveForever 25s cubic-bezier(0.55, 0.5, 0.45, 0.5) infinite;
     }
