--- a/assets/scss/_common.scss
+++ b/assets/scss/_common.scss
@@ -95,7 +95,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 50px 15px;
+    // padding: 50px 15px;
     .banner-content {
       width: 100%;
       height: 100%;
