--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1006,12 +1006,12 @@ a {
 
 .about-us {
   background-color: #ffffff;
-  padding: 50px 0;
+  margin: 50px 0;
 }
 
 @media (min-width: 992px) {
   .about-us {
-    padding: 100px 0;
+    margin: 100px 0;
   }
 }
 
