--- a/assets/scss/_common.scss
+++ b/assets/scss/_common.scss
@@ -171,9 +171,9 @@
 // About Section Start
 .about-us {
   background-color: $whiteColor;
-  padding: 50px 0;
+  margin: 50px 0;
   @media (min-width: 992px) {
-    padding: 100px 0;
+    margin: 100px 0;
   }
   .section-title {
     font-family: $fontBaloo;
