--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -864,24 +864,13 @@ a {
   background: -o-linear-gradient(30deg, #543ab7 0%, #00aeef 100%);
   background: linear-gradient(60deg, #543ab7 0%, #00aeef 100%);
   height: 100vh;
-  overflow: hidden;
+  position: relative;
 }
 
 .banner .inner-banner {
   width: 100%;
   height: 100%;
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-  -webkit-justify-content: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-  -webkit-align-items: center;
-      -ms-flex-align: center;
-          align-items: center;
+  padding: 0 15px;
 }
 
 .banner .inner-banner .banner-content {
@@ -959,7 +948,7 @@ a {
   bottom: 0;
   width: 100%;
   min-height: 100px;
-  height: calc(100% - 85vh);
+  height: 15vh;
 }
 
 .banner .waves .parallax > use {
@@ -1124,6 +1113,7 @@ a {
   -webkit-transition: all 0.4s ease;
   -o-transition: all 0.4s ease;
   transition: all 0.4s ease;
+  z-index: 9;
 }
 
 .header .sub-header .container {
