--- a/assets/scss/_common.scss
+++ b/assets/scss/_common.scss
@@ -88,14 +88,18 @@
     rgba($themePrimary, 1) 100%
   );
   height: 100vh;
-  overflow: hidden;
+  // overflow: hidden;
+  position: relative;
   .inner-banner {
     width: 100%;
     height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    // padding: 50px 15px;
+    // position: absolute;
+    // top: 50%;
+    // transform: translateY(-50%);
+    // display: flex;
+    // justify-content: center;
+    // align-items: center;
+    padding: 0 15px;
     .banner-content {
       width: 100%;
       height: 100%;
@@ -144,7 +148,7 @@
     bottom: 0;
     width: 100%;
     min-height: 100px;
-    height: calc(100% - 85vh);
+    height: 15vh;
     .parallax > use {
       animation: moveForever 25s cubic-bezier(0.55, 0.5, 0.45, 0.5) infinite;
     }
