Banner css modified 2

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -864,13 +864,23 @@ a {
   background: -o-linear-gradient(30deg, #543ab7 0%, #00aeef 100%);
   background: linear-gradient(60deg, #543ab7 0%, #00aeef 100%);
   height: 100vh;
-  position: relative;
 }
 
 .banner .inner-banner {
   width: 100%;
   height: 100%;
-  padding: 0 15px;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 .banner .inner-banner .banner-content {
@@ -994,13 +1004,13 @@ a {
 }
 
 .about-us {
-  background-color: #ffffff;
-  margin: 50px 0;
+  background-color: #000000;
+  padding: 50px 0;
 }
 
 @media (min-width: 992px) {
   .about-us {
-    margin: 100px 0;
+    padding: 100px 0;
   }
 }
 
