--- a/assets/scss/_common.scss
+++ b/assets/scss/_common.scss
@@ -89,17 +89,17 @@
   );
   height: 100vh;
   // overflow: hidden;
-  position: relative;
+  // position: relative;
   .inner-banner {
     width: 100%;
     height: 100%;
     // position: absolute;
     // top: 50%;
     // transform: translateY(-50%);
-    // display: flex;
-    // justify-content: center;
-    // align-items: center;
-    padding: 0 15px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    // padding: 0 15px;
     .banner-content {
       width: 100%;
       height: 100%;
@@ -174,10 +174,10 @@
 
 // About Section Start
 .about-us {
-  background-color: $whiteColor;
-  margin: 50px 0;
+  background-color: $blackColor;
+  padding: 50px 0;
   @media (min-width: 992px) {
-    margin: 100px 0;
+    padding: 100px 0;
   }
   .section-title {
     font-family: $fontBaloo;
