Banner height changed for mobile view

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -864,7 +864,13 @@ a {
   background: -webkit-linear-gradient(30deg, #543ab7 0%, #00aeef 100%);
   background: -o-linear-gradient(30deg, #543ab7 0%, #00aeef 100%);
   background: linear-gradient(60deg, #543ab7 0%, #00aeef 100%);
-  height: 100vh;
+  height: calc(100vh - 55px);
+}
+
+@media (min-width: 992px) {
+  .banner {
+    height: 100vh;
+  }
 }
 
 .banner .inner-banner {
