--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -999,7 +999,7 @@ a {
 
 .about-us {
   background-color: #ffffff;
-  padding: 50px 0;
+  padding: 90px 0 50px;
 }
 
 @media (min-width: 992px) {
@@ -1183,11 +1183,6 @@ a {
   color: #3b5998;
 }
 
-.header .sub-header .container .social-icons a.instagram svg {
-  width: 12px;
-  height: 12px;
-}
-
 .header .sub-header .container .social-icons a.instagram svg stop {
   stop-color: #ffffff;
   -webkit-transition: all 0.4s ease;
@@ -1195,27 +1190,12 @@ a {
   transition: all 0.4s ease;
 }
 
-@media (min-width: 992px) {
-  .header .sub-header .container .social-icons a.instagram svg {
-    width: 14px;
-    height: 14px;
-  }
-}
-
 .header .sub-header .container .social-icons a.instagram:hover svg .insta-color1 {
-  stop-color: #e09b3d;
+  stop-color: #ea8928;
 }
 
 .header .sub-header .container .social-icons a.instagram:hover svg .insta-color2 {
-  stop-color: #c74c4d;
-}
-
-.header .sub-header .container .social-icons a.instagram:hover svg .insta-color3 {
-  stop-color: #c21975;
-}
-
-.header .sub-header .container .social-icons a.instagram:hover svg .insta-color4 {
-  stop-color: #7024c4;
+  stop-color: #cf2b8f;
 }
 
 .header .sub-header .container .social-icons a.twitter:hover {
@@ -1492,6 +1472,12 @@ a {
          -o-transform: scaleX(1);
             transform: scaleX(1);
   }
+  .header .navbar .navbar-nav .nav-item .nav-link:hover i {
+    color: #00aeef;
+  }
+  .header .navbar .navbar-nav .nav-item .nav-link i {
+    color: #889198;
+  }
   .header .navbar .navbar-nav .nav-item .nav-link.active {
     font-weight: 500;
     color: #00aeef;
@@ -1541,6 +1527,14 @@ a {
 
 .header .navbar-sticky-dark .navbar-nav .nav-item .nav-link:hover::after {
   background-color: #00aeef;
+}
+
+.header .navbar-sticky-dark .navbar-nav .nav-item .nav-link:hover i {
+  color: #00aeef;
+}
+
+.header .navbar-sticky-dark .navbar-nav .nav-item .nav-link i {
+  color: #889198;
 }
 
 .header .navbar-sticky-dark .navbar-nav .nav-item .nav-link.active {
