--- a/assets/scss/_common.scss
+++ b/assets/scss/_common.scss
@@ -169,7 +169,7 @@
 // About Section Start
 .about-us {
   background-color: $whiteColor;
-  padding: 50px 0;
+  padding: 90px 0 50px;
   @media (min-width: 992px) {
     padding: 100px 0;
   }
@@ -213,22 +213,6 @@
     line-height: 35px;
     text-align: justify;
   }
-
-  // .slide-up {
-  //   animation: 2s slide-up;
-  // }
-
-  // @keyframes slide-up {
-  //   from {
-  //     margin-top: 100%;
-  //     height: 200%;
-  //   }
-
-  //   to {
-  //     margin-top: 0;
-  //     height: auto;
-  //   }
-  // }
 }
 
 // List Style{
