--- a/assets/scss/_common.scss
+++ b/assets/scss/_common.scss
@@ -169,7 +169,7 @@
 // About Section Start
 .about-us {
   background-color: $whiteColor;
-  padding: 90px 0 50px;
+  padding: 50px 0;
   @media (min-width: 992px) {
     padding: 100px 0;
   }
